MobileApp/app/src/main/java/com/example/fabflix/Login.java
package com.example.fabflix;

import android.content.Intent;
import android.os.Bundle;
import android.util.Log;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.TextView;
import androidx.appcompat.app.AppCompatActivity;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import org.json.JSONException;
import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class Login extends AppCompatActivity {

    private EditText username;
    private EditText password;
    private TextView message;
    private Button loginButton;
    private String url;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        // upon creation, inflate and initialize the layout
        setContentView(R.layout.login);
        username = findViewById(R.id.username);
        password = findViewById(R.id.password);
        message = findViewById(R.id.message);
        loginButton = findViewById(R.id.loginButton);
        /**
         * In Android, localhost is the address of the device or the emulator.
         * To connect to your machine, you need to use the below IP address
         * **/

        url = "https://54.151.13.196:8443/cs122b-spring20-team-80/api/";

        //assign a listener to call a function to handle the user request when clicking a button
        loginButton.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                login();
            }
        });
    }

    public void login() {

        // Use the same network queue across our application
        final RequestQueue queue = NetworkManager.sharedManager(this).queue;
        //request type is POST
        final StringRequest loginRequest = new StringRequest(Request.Method.POST, url + "login", new Response.Listener<String>() {
            @Override
            public void onResponse(String response) {

                //parse the json response to redirect to appropriate functions.

                try {
                    JSONObject jsonResponse = new JSONObject(response);
                    Log.d("login.success", response);
                    if(jsonResponse.getString("status").equals("success")) {
                        //initialize the activity(page)/destination
                        Intent mainPage = new Intent(Login.this, MainPage.class);
                        //without starting the activity/page, nothing would happen
                        startActivity(mainPage);
                    } else {
                        message.setText(jsonResponse.getString("message"));
                    }

                } catch (JSONException e) {
                    message.setText("Bad Response");
                    e.printStackTrace();
                }
            }
        },
        new Response.ErrorListener() {
            @Override
            public void onErrorResponse(VolleyError error) {
                // error
                message.setText(error.toString());
                System.out.println(error.toString());
                Log.d("login.error", error.toString());
            }
        }) {
            @Override
            protected Map<String, String> getParams() {
                // Post request form data
                final Map<String, String> params = new HashMap<>();

                params.put("email", username.getText().toString());
                params.put("password", password.getText().toString());
                params.put("isMobile","true");

                return params;
            }
        };

        // !important: queue.add is where the login request is actually sent
        queue.add(loginRequest);

    }
}